# qt-ads

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bhf_registry.cpp  bhf_registry.h  bhf_struct_tree.cpp  bhf_struct_tree.h  main.cpp  plc_client.h  plc_monitor_window.cpp  plc_monitor_window.h  standard_types.h  tc2_mc2_monitor.cpp  tc2_mc2_monitor.h  tc2_mc2_types.cpp  tc2_mc2_types.h
LIBS_TWINCAT/tcplclib_tc2_coupler/: CouplerReset.md  Data_types.md  E_CouplerErrType.md  FB_ReadCouplerDiag.md  FB_ReadCouplerRegs.md  FB_WriteCouplerRegs.md  F_GetVersionTcPlcCoupler.md  Foreword.md  Function_blocks.md  Global_Constants.md  Library_version.md  ManualTwinCAT_3_PLC_Library_Tc2_Coupler.md  Notes_on_the_documentation.md  Overview.md  PLCINTFSTRUCT.md  ReadWriteTerminalReg.md  ST_CouplerDiag.md  ST_CouplerReg.md  ST_CouplerTable.md  ST_FlashCode.md  Safety_instructions.md  _obsolete_functions_.md
LIBS_TWINCAT/tcplclib_tc2_dali/: Addressing.md  Appendix.md  Application-related_expansion_commands.md  B_E_G_.md  Base.md  Configuration.md  DALI.md  DSI.md  DUTs.md  E_DALIV2AddrType.md  E_DALIV2CommandPriority.md  E_DALIV2ConfigurationCommands.md  E_DALIV2CurrentAddressingState.md  E_DALIV2DataFrameType.md  E_DALIV2DimmingCurve.md  E_DALIV2EventScheme.md  E_DALIV2InstAddrType.md  E_DALIV2OperationMode.md  E_DALIV2PowerSupplyMode.md  Enums.md  Error_codes.md  FB_DALIV2Activate.md  FB_DALIV2AddToGroup.md  FB_DALIV2AddressingIntRandomAddressing.md  FB_DALIV2AddressingPhysicalSelection.md  FB_DALIV2AddressingRandomAddressing.md  FB_DALIV2AssignColourToLinkedChannel.md  FB_DALIV2ChangeAddressList.md  FB_DALIV2ColourTemperatureTcStepCooler.md  FB_DALIV2ColourTemperatureTcStepWarmer.md  FB_DALIV2Communication.md  FB_DALIV2Compare.md  FB_DALIV2ConstantLightControlEco.md  FB_DALIV2CopyReportToTemporary.md  FB_DALIV2Dimmer1Switch.md  FB_DALIV2Dimmer1SwitchEco.md  FB_DALIV2Dimmer1SwitchMultiple.md  FB_DALIV2Dimmer2Switch.md  FB_DALIV2Dimmer2SwitchEco.md  FB_DALIV2DirectArcPowerControl.md  (+332 more)
LIBS_TWINCAT/tcplclib_tc2_dataexchange/: Data_types.md  E_AdsComMode.md  Event_driven_data_exchange.md  FB_CheckWatchdog.md  FB_ReadAdsSymByName.md  FB_WriteAdsSymByName.md  FB_WriteBoolOnDelta.md  FB_WriteByteOnDelta.md  FB_WriteDWordOnDelta.md  FB_WriteLRealOnDelta.md  FB_WriteRealOnDelta.md  FB_WriteWatchdog.md  FB_WriteWordOnDelta.md  Foreword.md  Global_constants.md  Introduction.md  Library_version.md  ManualTwinCAT_3_PLC_Library_Tc2_DataExchange.md  Notes_on_the_documentation.md  Safety_instructions.md  Watchdog_function_blocks.md
LIBS_TWINCAT/tcplclib_tc2_dmx/: Appendix.md  Base.md  DMX.md  DUTs.md  Device_Control_Parameter_Message.md  Discovery_Messages.md  EL6851_with_CX5120.md  E_DMXCommandClass.md  E_DMXDataType.md  E_DMXLampOnMode.md  E_DMXParameterDescriptionCommandClass.md  E_DMXParameterId.md  E_DMXProductDetail.md  E_DMXResetDeviceType.md  E_DMXResponseType.md  E_DMXSensorType.md  E_DMXSensorUnit.md  E_DMXSensorUnitPrefix.md  (+81 more)
scripts/: ESPECIFICACAO_FASE2.md  ESPECIFICACAO_FINAL.md  convert_beckhoff_html_to_md.py
src/: bhf_registry.cpp  bhf_registry.h  bhf_struct_tree.cpp  bhf_struct_tree.h  main.cpp  plc_client.cpp  plc_client.h  plc_monitor_window.cpp  plc_monitor_window.h  standard_types.cpp  standard_types.h  test_dt_upload.cpp
(+4317 files in other folders)
